--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
+    <meta charset="utf-8"/>
+    <title>Die Dreizehn Gezeichneten</title>
 </head>
 <body>
-$END$
+<h1>Willkommen in Sgyna, Stadt der 13 Zeichen!</h1>
+<p>
+    Welche Zeichen sollst du erlernen?<br/>
+    Welche Gilde passt zu dir?<br/>
+    Trete vor den Gildenrat, stelle dich ihren Fragen und finde es nun heraus!
+</p>
+<p><a href="/gildenrat" th:href="@{/gildenrat}">Zum Gildenrat</a></p>
 </body>
 </html>
