--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
+    <meta charset="utf-8" />
+    <title>Die Dreizehn Gezeichneten</title>
 </head>
 <body>
-$END$
+<h1>Der Gildenrat hat deine Antworten gehört und empfiehlt dir:</h1>
+<p th:text="${result}">Lern was anständiges.</p>
+<hr />
+<a href="index.html" th:href="@{/}">Zum Anfang</a>
 </body>
 </html>
