--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,7 +5,7 @@
     <title>Die Dreizehn Gezeichneten</title>
 </head>
 <body>
-<h1>Willkommen in Sgyna, Stadt der 13 Zeichen!</h1>
+<h1>Willkommen in Sygna, Stadt der 13 Zeichen!</h1>
 <p>
     Welche Zeichen sollst du erlernen?<br/>
     Welche Gilde passt zu dir?<br/>
