--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org"
+      th:lang="${#locale.language}"
+>
 <head>
     <meta charset="utf-8" />
     <title>Die Dreizehn Gezeichneten</title>
