--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,5 +15,6 @@
     Trete vor den Gildenrat, stelle dich ihren Fragen und finde es nun heraus!
 </p>
 <p><a href="gildenrat.html" th:href="@{/gildenrat}">Zum Gildenrat</a></p>
+<img src="/CoverFinal.jpg" width="206" height="325" />
 </body>
 </html>
