--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -21,5 +21,7 @@
 <form method="post" action="#" th:action="@{/reset}">
     <input type="submit" value="Von vorne anfangen" />
 </form>
+<br />
+<img src="/CoverFinal.jpg" width="206" height="325" />
 </body>
 </html>
