--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -15,7 +15,7 @@
     Mehr über die 13 Gezeichneten findest du im
     <a href="https://www.luebbe.de/bastei-luebbe/buecher/fantasy-buecher/die-dreizehn-gezeichneten/id_6121562">Roman</a>,
     auf dieser <a href="https://sites.google.com/view/scherbenland/die-13-gezeichneten">Webseite zur Welt</a>
-    und auf der <a href="http://www.jcvogt.de">Homepage der Vögte.</a>.
+    und auf der <a href="http://www.jcvogt.de">Homepage der Vögte</a>.
 </p>
 <hr />
 <a href="index.html" th:href="@{/}">Zum Anfang</a>
