--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,20 +1,39 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org"
-      th:lang="${#locale.language}"
->
-<head>
-    <meta charset="utf-8"/>
-    <title>Die Dreizehn Gezeichneten</title>
-</head>
-<body>
-<h1>Willkommen in Sygna, Stadt der 13 Zeichen!</h1>
-<p>
-    Welche Zeichen sollst du erlernen?<br/>
-    Welche Gilde passt zu dir?<br/>
-    Trete vor den Gildenrat, stelle dich ihren Fragen und finde es nun heraus!
-</p>
-<p><a href="gildenrat.html" th:href="@{/gildenrat}">Zum Gildenrat</a></p>
-<img src="/CoverFinal.jpg" width="206" height="325" />
-</body>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" th:lang="${#locale.language}">
+    <head>
+        <meta charset="utf-8" />
+        <title>Die Dreizehn Gezeichneten</title>
+        <!-- Bootstrap core CSS -->
+        <link th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" rel="stylesheet" />
+        <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+    </head>
+    <body>
+        <div class="container">
+            <div class="page-header">
+                <h1>Die 13 Gezeichneten</h1>
+                <p class="lead">Willkommen in Sygna, Stadt der 13 Zeichen!</p>
+            </div>
+            <h3>Der Gildenrat</h3>
+            <div class="row">
+                <div class="col-xs-3">
+                    <a href="https://www.luebbe.de/bastei-luebbe/buecher/fantasy-buecher/die-dreizehn-gezeichneten/id_6121562">
+                        <img src="/CoverFinal.jpg" th:src="@{/CoverFinal.jpg}" class="img-thumbnail img-responsive" />
+                    </a>
+                </div>
+                <div class="col-xs-9">
+                    <p>
+                        Welche Zeichen sollst du erlernen?<br />
+                        Welche Gilde passt zu dir? <br />
+                        Trete vor den Gildenrat, stelle dich ihren Fragen und finde es nun heraus!
+                    </p>
+                    <p>
+                        <a class="btn btn-primary" href="gildenrat.html" th:href="@{/gildenrat}">Zum Gildenrat…</a>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </body>
 </html>
