--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -1,27 +1,50 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org"
-      th:lang="${#locale.language}"
->
-<head>
-    <meta charset="utf-8" />
-    <title>Die Dreizehn Gezeichneten</title>
-</head>
-<body>
-<h1>Frage <span th:text="${questionNumber}">1</span>: <span th:text="${step.question}">Wie geht es Dir heute?</span></h1>
-<form method="post" action="#" th:action="@{/answer}">
-    <div th:each="option, stat : ${step.options}" th:remove="tag">
-        <input th:id="${'answer' + stat.index}" type="radio" name="answer" th:value="${stat.index + 1}" />&#160;
-        <label th:for="${'answer' + stat.index}" th:text="${option}">Irgendeine Antwort</label>
-        <br />
-    </div>
-    <input type="submit" value="Weiter" />
-</form>
-<hr />
-<form method="post" action="#" th:action="@{/reset}">
-    <input type="submit" value="Von vorne anfangen" />
-</form>
-<br />
-<img src="/CoverFinal.jpg" width="206" height="325" />
-</body>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" th:lang="${#locale.language}">
+    <head>
+        <meta charset="utf-8" />
+        <title>Die Dreizehn Gezeichneten</title>
+        <!-- Bootstrap core CSS -->
+        <link th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" rel="stylesheet" />
+        <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+    </head>
+    <body>
+        <div class="container">
+            <div class="page-header">
+                <h1>Die 13 Gezeichneten</h1>
+                <p class="lead">Willkommen in Sygna, Stadt der 13 Zeichen!</p>
+            </div>
+            <h3>Frage 
+            <span th:text="${questionNumber}">1</span>: 
+            <span th:text="${step.question}">Wie geht es Dir heute?</span></h3>
+            <div class="row">
+                <div class="col-xs-3">
+                    <a href="https://www.luebbe.de/bastei-luebbe/buecher/fantasy-buecher/die-dreizehn-gezeichneten/id_6121562">
+                        <img src="/CoverFinal.jpg" th:src="@{/CoverFinal.jpg}" class="img-thumbnail img-responsive" />
+                    </a>
+                </div>
+                <div class="col-xs-9">
+                    <form method="post" action="#" th:action="@{/answer}">
+                        <div class="radio" th:each="option, stat : ${step.options}">
+                            <label>
+                                <input type="radio" name="answer" th:value="${stat.index + 1}" />
+                                <span th:text="${option}">Irgendeine Antwort</span>
+                            </label>
+                        </div>
+                        <button class="btn btn-primary" type="submit">Weiter</button>
+                    </form>
+                </div>
+            </div>
+            <hr />
+            <div class="row">
+                <div class="col-xs-3">
+                    <form method="post" action="#" th:action="@{/reset}">
+                        <button class="btn btn-default" type="submit">Von vorne anfangen</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </body>
 </html>
