Change links to Amazon

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -19,7 +19,7 @@
             <h3>Der Gildenrat</h3>
             <div class="row">
                 <div class="col-xs-3">
-                    <a href="https://www.luebbe.de/bastei-luebbe/buecher/fantasy-buecher/die-dreizehn-gezeichneten/id_6121562">
+                    <a href="https://www.amazon.de/dreizehn-Gezeichneten-Judith-Christian-Vogt/dp/3404208927/">
                         <img src="/CoverFinal.jpg" th:src="@{/CoverFinal.jpg}" class="img-thumbnail img-responsive" />
                     </a>
                 </div>
