--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -23,7 +23,7 @@
                         <mark th:text="${result.second}">Lern was anständiges.</mark>
                     </p>
                     <p>
-                        <a href="https://www.luebbe.de/bastei-luebbe/buecher/fantasy-buecher/die-dreizehn-gezeichneten/id_6121562">
+                        <a href="https://www.amazon.de/dreizehn-Gezeichneten-Judith-Christian-Vogt/dp/3404208927/">
                             <img src="/CoverFinal.jpg" th:src="@{/{sign}.png(sign=${result.first})}" class="img-rounded img-responsive" />
                         </a>
                     </p>
@@ -35,8 +35,8 @@
             <hr />
             <div class="row">
                 <div class="col-xs-12">
-                    <p>Mehr über die 13 Gezeichneten findest du im
-                    <a href="https://www.luebbe.de/bastei-luebbe/buecher/fantasy-buecher/die-dreizehn-gezeichneten/id_6121562">Roman</a>, auf dieser
+		    <p>Du kannst das den Roman <em>Die dreizehn Gezeichneten</em> bei <a href="https://www.amazon.de/dreizehn-Gezeichneten-Judith-Christian-Vogt/dp/3404208927/">Amazon</a> oder im lokalen Buchhandel erwerben.</p>
+                    <p>Mehr über die 13 Gezeichneten findest du im auf der
                     <a href="https://sites.google.com/view/scherbenland/die-13-gezeichneten">Webseite zur Welt</a> und auf der
                     <a href="http://www.jcvogt.de">Homepage der Vögte</a>.</p>
                 </div>
