--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -21,7 +21,7 @@
             <span th:text="${step.question}">Wie geht es Dir heute?</span></h3>
             <div class="row">
                 <div class="col-xs-3">
-                    <a href="https://www.luebbe.de/bastei-luebbe/buecher/fantasy-buecher/die-dreizehn-gezeichneten/id_6121562">
+                    <a href="https://www.amazon.de/dreizehn-Gezeichneten-Judith-Christian-Vogt/dp/3404208927/">
                         <img src="/CoverFinal.jpg" th:src="@{/CoverFinal.jpg}" class="img-thumbnail img-responsive" />
                     </a>
                 </div>
