--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -6,9 +6,25 @@
         <!-- Bootstrap core CSS -->
         <link th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" rel="stylesheet" />
         <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+        <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+        <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+        <![endif]-->
+        <script>window.twttr = (function(d, s, id) {
+          var js, fjs = d.getElementsByTagName(s)[0],
+            t = window.twttr || {};
+          if (d.getElementById(id)) return t;
+          js = d.createElement(s);
+          js.id = id;
+          js.src = "https://platform.twitter.com/widgets.js";
+          fjs.parentNode.insertBefore(js, fjs);
+
+          t._e = [];
+          t.ready = function(f) {
+            t._e.push(f);
+          };
+
+          return t;
+        }(document, "script", "twitter-wjs"));</script>
     </head>
     <body>
         <div class="container">
@@ -20,7 +36,7 @@
             <div class="row">
                 <div class="col-xs-12">
                     <p>
-                        <mark th:text="${result.second}">Lern was anständiges.</mark>
+                        <mark th:text="${result.second}">Lern was anständiges.</mark><br /><br /><a class="twitter-share-button" href="#" th:href="@{https://twitter.com/intent/tweet(text=${'Mein Zeichen: &quot;' + result.second + '&quot;'},url='https://die13gezeichneten.herokuapp.com')}">Tweet</a>
                     </p>
                     <p>
                         <a href="https://www.amazon.de/dreizehn-Gezeichneten-Judith-Christian-Vogt/dp/3404208927/">
@@ -35,7 +51,7 @@
             <hr />
             <div class="row">
                 <div class="col-xs-12">
-		    <p>Du kannst das den Roman <em>Die dreizehn Gezeichneten</em> bei <a href="https://www.amazon.de/dreizehn-Gezeichneten-Judith-Christian-Vogt/dp/3404208927/">Amazon</a> oder im lokalen Buchhandel erwerben.</p>
+                    <p>Du kannst das den Roman <em>Die dreizehn Gezeichneten</em> bei <a href="https://www.amazon.de/dreizehn-Gezeichneten-Judith-Christian-Vogt/dp/3404208927/">Amazon</a> oder im lokalen Buchhandel erwerben.</p>
                     <p>Mehr über die 13 Gezeichneten findest du im auf der
                     <a href="https://sites.google.com/view/scherbenland/die-13-gezeichneten">Webseite zur Welt</a> und auf der
                     <a href="http://www.jcvogt.de">Homepage der Vögte</a>.</p>
