--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -44,6 +44,7 @@
                         <button class="btn btn-default" type="submit">Von vorne anfangen</button>
                     </form>
                 </div>
+                <div th:replace="_fragments.html :: links(0)">
             </div>
         </div>
     </body>
