--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -34,6 +34,9 @@
                     </p>
                 </div>
             </div>
+            <hr />
+            <div class="row" th:insert="_fragments.html :: links(3)">
+            </div>
         </div>
     </body>
 </html>
